data/all_generated_tests/raw_wast_tests/block_EdgeCaseFailuresinbr_table_67.wast
;; 8. **Test with `br_table` Directly Followed by another `block`**:    - `br_table` appearing at the end of a `block` immediately preceding another `block`.    - Ensures that label resolution and branching correctly recognize the context end points even at block boundaries.    - Edge Case: Wizard_engine’s state management functions might not correctly resume execution past boundary points, leading to incorrect behavior.

(assert_invalid
  (module (func $type-br_table-after-block
    (block (result i32)
      (br_table 0 (i32.const 0))
    )
    (block (result i32)
      (i32.const 1)
    )
  ))
  "type mismatch"
)